--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             font-family: 'Poppins', sans-serif;    /* font-family: 'Arial', sans-serif;  */
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
             color: #222;
            }
 
@@ -194,7 +194,7 @@
 
             .button-container button {
             padding: 10px 15px;
-            border: none;
+            border: 1px solid;
             cursor: pointer;
             border-radius: 5px;
             font-size: 14px;
@@ -205,6 +205,7 @@
             margin: 3px;
             background: green;
             color: white;
+
         }
         .download-btn:hover {
             transform: scale(1.1);
@@ -216,6 +217,7 @@
              margin: 3px;
             background: #1c8ff3;
             color: white;
+        
         }
         .download-link1:hover {
             transform: scale(1.1);
@@ -227,6 +229,7 @@
                margin: 3px;
             background: #1c8ff3;
             color: white;
+
         }
         .download-link2:hover {
             transform: scale(1.1);
