--- a/index.html
+++ b/index.html
@@ -383,6 +383,10 @@
             font-weight: 350;
             font-size: 7px;
         }
+        .button-container button {
+            padding: 5px 10px;
+            font-size: 12px;
+        }
            
     }
     </style>
