--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@
         <div class="section">
             <h2>Education</h2>
               <ul class="skill">
-                <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1742533614/Degree_cert_qttq8k.jpg"><b>Bachelor of Technology (B.Tech) in Computer Science and Engineering</b> - Dr.Babasaheb Ambedkar Technological University Lonere-Raigad | 2022 | CGPA: 7.86/10 </a></li>
-                <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1742533962/HSC_gjgvaj.jpg"><b>Higher Secondary Certificate (HSC) – Science </b> from NVS Swatantrya Veer Savarkar Vidyalaya, Sayala-Parbhani | 2016 |  67.54% </a></li>
-                <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1742533615/SSC_MARK_CERT_rboa2t.jpg"><b>Secondary School Certificate (SSC)  </b>– Sharada Vidyalaya, Adgaon (K) Dist.Parbhani | 2014 | 74.60% </a></li>
+                <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1756965585/Degree_h40s5v.png"><b>Bachelor of Technology (B.Tech) in Computer Science and Engineering</b> - Dr.Babasaheb Ambedkar Technological University Lonere-Raigad | 2022 | CGPA: 7.86/10 </a></li>
+                <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1756965590/HSC_icspjf.png"><b>Higher Secondary Certificate (HSC) – Science </b> from NVS Swatantrya Veer Savarkar Vidyalaya, Sayala-Parbhani | 2016 |  67.54% </a></li>
+                <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1756965589/SSC_avtxhb.png"><b>Secondary School Certificate (SSC)  </b>– Sharada Vidyalaya, Adgaon (K) Dist.Parbhani | 2014 | 74.60% </a></li>
             </ul>
         </div>
         
