--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         <div class="section certification">
             <h2>Certifications</h2>
             <ul class="">
-                <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1770052193/intern_mhnows.png">Intern – Full-Stack Web Development, Corporate Web Solutions | May–Sep 2025</a></li>
+                <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1770052193/intern_mhnows.png">Intern – Full-Stack Web Development, Corporate Web Solutions (May–Sep 2025)</a></li>
                 <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1740531678/Project_management_with_JIRA_krcpbi.png">Project Management with JIRA - Skill India Digital (N.S.D.C.) (2025)</a></li>
                 <li><a href="https://res.cloudinary.com/p-desk/image/upload/v1741801348/CertificateOfCompletion_HTML_Essential_Training_2020_1_xzusax.png">HTMl & CSS Essential Training - LinkedIn Learning (2025)</a></li>
                 <li><a  href="https://res.cloudinary.com/p-desk/image/upload/v1741801351/CertificateOfCompletion_Python_for_NonProgrammers_1_yj9mr8.png">Python - LinkedIn Learning (2025)</a></li>
