--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     <span> | </span>
                         <a class="portfolio" href="https://www.linkedin.com/in/pratiks-desk/" target="_blank">LinkedIn</a>
                     <span> | </span>
-                     <a class="portfolio" href="https://pratiks-desk.site" target="_blank">portfolio</a>
+                     <a class="portfolio" href="https://pratiks-desk.in" target="_blank">portfolio</a>
                     <span> | </span>
                 </small>
             </div>
